Fix excessive scrollbars in comment tab

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -2225,7 +2225,7 @@ tr.commentMarked div.commentInfo div.commentMarkedTag {
 table[id$="_comments"] {
   width: 100%;
   height: 0px;
-  min-height: 40em;
+  min-height: 5em;
   flex: 1 1 auto;
   overflow-y: scroll;
   display: block;
